unpackaged/main/default/objects/membership__c/fields/Zuora_Monthly_Amount_without_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Monthly_Amount_without_Discounts__c</fullName>
    <formula>Zuora_Contract_Value_without_Discounts__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zuora Monthly Amount without Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>