unpackaged/main/default/objects/membership__c/fields/Zuora_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Subscription_Start_Date__c</fullName>
    <label>Zuora Subscription Start Date</label>
    <type>Date</type>
</CustomField>