unpackaged/main/default/objects/membership__c/fields/zz_Initiate_Lift_Info__c.field-meta.xml
<CustomField>
    <fullName>zz_Initiate_Lift_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Lift Info</label>
    <type>Checkbox</type>
</CustomField>