unpackaged/main/default/objects/membership__c/fields/zz_momentary_prime_price__c.field-meta.xml
<CustomField>
    <fullName>zz_momentary_prime_price__c</fullName>
    <formula>&quot;Monthly Price: &quot; +  TEXT(momentary_prime_monthly_price__c) + &quot; &quot;+ CASE(currency__c, &quot;EUR&quot;, &quot;€&quot;, &quot;USD&quot;, &quot;$&quot;, &quot;PLN&quot;,&quot;PLN&quot;,&quot;CHF&quot;, &quot;CHF&quot;, &quot;GBP&quot;, &quot;GBP&quot;,&quot;€&quot;) + BR() +
&quot;Yearly Price: &quot; +  TEXT(momentary_prime_monthly_price__c * 12) + &quot; &quot;+ CASE(currency__c, &quot;EUR&quot;, &quot;€&quot;, &quot;USD&quot;, &quot;$&quot;, &quot;PLN&quot;,&quot;PLN&quot;,&quot;CHF&quot;, &quot;CHF&quot;,&quot;GBP&quot;, &quot;GBP&quot;, &quot;€&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Momentary Prime Price</label>
    <type>Text</type>
</CustomField>