unpackaged/main/default/objects/membership__c/fields/zz_termination_in_future__c.field-meta.xml
<CustomField>
    <fullName>zz_termination_in_future__c</fullName>
    <formula>valid_to__c -    TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until termination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>