unpackaged/main/default/objects/membership__c/fields/zz_turnover_customer__c.field-meta.xml
<CustomField>
    <fullName>zz_turnover_customer__c</fullName>
    <formula>IF( is_turnover_member__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnover Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>