unpackaged/main/default/objects/membership__c/validationRules/Prevent_Changing_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changing_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; $User.ignore_validation_rules__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot change the name of a Membership.</errorMessage>
</ValidationRule>